controller/internal/istio/testdata/consumers.yml
metadata:
  creationTimestamp: null
  labels:
    htnn.mosn.io/created-by: Consumer
  name: htnn-consumer
  namespace: istio-system
spec:
  configPatches:
  - applyTo: EXTENSION_CONFIG
    patch:
      operation: ADD
      value:
        disabled: true
        name: htnn-consumer
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
          library_id: cm
          library_path: /path/to/goso
          plugin_config:
            '@type': type.googleapis.com/xds.type.v3.TypedStruct
            value:
              ns:
                consumer1: config
                consumer2: config
          plugin_name: cm
  - applyTo: HTTP_FILTER
    match:
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
            subFilter:
              name: envoy.filters.http.router
    patch:
      operation: INSERT_BEFORE
      value:
        config_discovery:
          config_source:
            ads: {}
          type_urls:
          - type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
        name: htnn-consumer
status: {}
